# N.I.R.A

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Computer Vision.py  FAQ.md  LICENCE  LICENSE  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v12.1.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v12.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v13.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v14.2.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v14.3.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v14.4.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v14.6.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v14.7.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v14.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v15.1.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v15.10.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v15.3.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v15.5.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v15.7.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v16.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v19.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v2.1.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v3.1.txt  Neural Advanced Interactive Network Assistant (N.A.I.N.A)-beta v3.txt  Nira.py  (+16 more)
(+74 files in other folders)
